Fix point insertion offets, fix initial unshiftPoint glitch

--- a/styles.css
+++ b/styles.css
@@ -93,7 +93,7 @@ html,body{
 
 .hidLine{
   stroke: transparent;
-  stroke-width: 10
+  stroke-width: 15
 }
 
 body{
